[package]
name = "perfcnt"
version = "0.5.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Brian Martin <bmartin@twitter.com>"]
description = "Library to configure and read hardware performance counters in rust."
homepage = "https://github.com/gz/rust-perfcnt"
repository = "https://github.com/gz/rust-perfcnt"
documentation = "http://gz.github.io/rust-perfcnt/perfcnt/"
readme = "README.md"
keywords = ["performance", "counter", "events", "pmu", "perf"]
license = "MIT"
edition = '2018'

[dependencies]
bitflags = "1.2.1"
libc = "0.2"
x86 = { version = "0.33.0", features = ["performance-counter"] }
mmap = "0.1.*"
byteorder = "1.3.4"
nom = "4.2.3"
phf = "0.8.0"

[[bin]]
name = "perfcnt-list"
path = "src/bin/list.rs"

[[bin]]
name = "perfcnt-parse"
path = "src/bin/parse.rs"

[[bin]]
name = "perfcnt-stats"
path = "src/bin/stats.rs"
